# Projeto_1_I2A2

./: .gitignore  README.md  TributAI.py  pyproject.toml
